<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title_production_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginLeft="70dp"
        android:text="Production Time (mins)"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/text_production_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:layout_marginLeft="70dp"
        android:text="25"
        android:singleLine="true"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/text_title_short_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:layout_marginLeft="70dp"
        android:text="Short Break (mins)"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/text_short_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="120dp"
        android:layout_marginLeft="70dp"
        android:text="5"
        android:singleLine="true"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/text_title_long_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="180dp"
        android:layout_marginLeft="70dp"
        android:text="Long Break (mins)"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/text_long_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="200dp"
        android:layout_marginLeft="70dp"
        android:text="30"
        android:singleLine="true"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/text_title_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="260dp"
        android:layout_marginLeft="70dp"
        android:text="Cycles"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/text_cycles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="280dp"
        android:layout_marginLeft="70dp"
        android:text="2"
        android:singleLine="true"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button_to_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="Next" />

</RelativeLayout>